Fix clipped shadow and illustration in worries section bottom cards
Add padding-bottom to .worries__layout to prevent drop shadow
and character illustrations from being clipped at the bottom

--- a/style.css
+++ b/style.css
@@ -305,6 +305,8 @@ body {
   position: relative;
   width: 1047px;
   height: 408px;
+  padding-bottom: 50px;
+  box-sizing: content-box;
 }
 
 .worries__bg-circle {
